# instructor-lite

./: .gitignore  LICENSE  README.md  flake.nix  instructor.py  pyproject.toml  test_instructor.py
