[tool.poetry]
name = "local-embeddings"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9.0"
transformers = "^4.29.2"
torch = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
instructorembedding = "^1.0.1"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
